Fix Windows Scrollbars

--- a/less/components/content.less
+++ b/less/components/content.less
@@ -9,6 +9,6 @@ main {
   flex-direction: column;
   align-items: center;
 
-  overflow-y: scroll;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
