--- a/less/pages/bugs.less
+++ b/less/pages/bugs.less
@@ -6,7 +6,7 @@
   .center();
   .card {
     width: 85vw;
-    overflow-y: scroll;
+    overflow-y: auto;
 
     .card-header {
       height: 50px;
